@@ -18,6 +18,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
+server/input.c:  modify examine_monster to use the maxhp field instead of
+the arch hp field to determine healthiness of the monster.  Also, give
+this information for all creatures, not just monsters or players.  
+MSW 5/23/200
+
 socket/item.c:  Add MAXITEMLEN define at top of file and use that to determine
     at what point item commands should be broken up.  Prior hard coded value
     was not always large enough.  MSW 5/23/2000
